ChangeLog 'ClusteringSuite'

YYYY-MM-DD  John Doe  <johndoe@example.com>

	* myfile.ext (myfunction): my changes made
	additional changes

	* myfile.ext (unrelated_change): my changes made
	to myfile.ext but completely unrelated to the above

	* anotherfile.ext (somefunction): more changes

2011-11-21 German Llort <german.llort@bsc.es>
	* Added 'substitute' and 'substitute-all' scripts

2011-11-21 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Added 'TreeDBSCAN' source tree.

	* Erased 'doc' source tree. To be restored in future versions

2011-11-21 German Llort <german.llort@bsc.es>
	* Modified autogen-mn.sh

	* Erased configure.ac and aclocal.m4 

2011-11-21 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Added 'TreeDBSCAN' source code that implements a tree version
	approach to parallelize DBSCAN using the MRNet infrastructure

	* Added a CGAL kernel (obtained from the CGAL examples) to include
	density information to CGAL points. The points contained in this
	kernel are still bidimensional. To avoid a problem of CGAL when
	determining the polygon intersection algorithnm this points
	contain a vector of 'float' instead of 'double. That could be a
	potential problem

	* Better use of CGAL flags in the building system. Also added the
	macros to check the presence of 'MRNetApp' library

	* Added 'Code:Blocks' project files


2011-11-14 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Better support for versioning

2011-11-14 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Changed the 'config.h' file to 'clustering_suite_config.h' to 
	better integrate to external tools

	* New modifications on CGAL/MPFR/GMP building system

	* Clusters information file generation feature added to
	'libDistributedClustering'

	* Added compatibility to unified printing of Hull models. It is
	a buggy feature. *It needs to specify a normalized plot definition
	to print the hulls*

2011-09-01 German Llort <german.llort@bsc.es>
	* Added a size method and a new merge implementation on the Convex
	Hull model
